@startuml SpaceProbe_All_Patterns_Final

' --- Settings ---
skinparam classAttributeIconSize 0
skinparam direction LR
skinparam packageStyle rectangle
skinparam shadowing false
!define BUILDER_COLOR #FFF9C4
!define PROTO_COLOR #D1C4E9
!define SINGLETON_COLOR #C8E6C9 ' Color for Singleton

skinparam class {
    BackgroundColor<<ConcreteBuilder>> BUILDER_COLOR
    BackgroundColor<<Product>> PROTO_COLOR
    BackgroundColor<<Prototype>> PROTO_COLOR
    BackgroundColor<<ConcretePrototype>> PROTO_COLOR
    BackgroundColor<<Singleton>> SINGLETON_COLOR
}

' === Builder Pattern (Unchanged as requested) ===

class SpaceMissionApp <<Client>> {
    +main(args: String[])
    ' No longer holds an instance, uses static method
    +deployMission()
}

class MissionControl <<Director>> {
    +constructStandardProbe(builder: SpaceProbeBuilder)
    +constructLightweightProbe(builder: SpaceProbeBuilder)
}

interface SpaceProbeBuilder <<Interface>> {
    +reset()
    +buildPropulsionSystem()
    +buildPowerSource()
    +buildScientificInstruments()
    +buildMissionTarget()
    +buildPayloadMass()
    +getResult(): SpaceProbe
}

class MarsProbeBuilder <<ConcreteBuilder>> {
    -probe: SpaceProbe
    +reset()
    ' ... methods
    +getResult(): SpaceProbe
}

class JupiterProbeBuilder <<ConcreteBuilder>> {
    -probe: SpaceProbe
    +reset()
    ' ... methods
    +getResult(): SpaceProbe
}

' === Prototype Pattern (Unchanged as requested) ===

interface IPrototype <<Prototype>> {
    ' Supports efficient deep copying
    +deepClone(): IPrototype
}

' === The Product (Unchanged as requested) ===
class SpaceProbe <<Product, ConcretePrototype>> {
    -propulsionSystem: String
    -powerSource: String
    -scientificInstruments: List<String>
    -missionTarget: String
    -payloadMass: double
    -SpaceProbe()
    +describe()
    {static} +createNewInstance(): SpaceProbe
    +deepClone(): IPrototype
    +setPayloadMass(mass: double)
    +getPayloadMass(): double
}

' === Singleton Pattern (THE NEW ADDITION) ===
' This class is the (renamed) PrototypeRegistry,
' now implemented as a Singleton as requested.

class ConfigurationManager <<Singleton>> {
    ' --- Singleton Implementation ---
    - {static} instance: ConfigurationManager
    ' 1. Private constructor (hides 'new')
    - ConfigurationManager()
    ' 3. Public static access method
    + {static} getInstance(): ConfigurationManager
    
    ' --- Registry Functionality (Unchanged) ---
    - prototypes: Map<String, IPrototype>
    ' 2. Holds and dispenses prototypes
    + addPrototype(key: String, prototype: IPrototype)
    + getClone(key: String): IPrototype
}


' --- Define Relationships ---

' Builder Relationships (Unchanged)
SpaceMissionApp ..> MissionControl : "uses"
MissionControl o-- "1" SpaceProbeBuilder : "uses"
SpaceProbeBuilder <|.. MarsProbeBuilder
SpaceProbeBuilder <|.. JupiterProbeBuilder
MarsProbeBuilder ..> SpaceProbe : "creates"
JupiterProbeBuilder ..> SpaceProbe : "creates"

' Prototype Relationship (Unchanged)
IPrototype <|.. SpaceProbe : "implements"

' --- Singleton/Registry Relationships (MODIFIED) ---

' The Client USES the Singleton's static method
' instead of creating a 'new' registry
SpaceMissionApp ..> ConfigurationManager : "uses getInstance()"

' The Singleton manages the prototypes (as before)
ConfigurationManager *-- " N" IPrototype : "manages"

' Client still receives clones
SpaceMissionApp ..> IPrototype : "receives clone as"
ConfigurationManager ..> ConfigurationManager




' --- Notes explaining the full flow (Updated) ---

note as TemplateNote
  <b>1. Create "Template Probes" (Builder):</b>
  Use Builder/Director to create the complex
  "Template Probes" (e.g., Mars & Jupiter) ONCE.
  <i>director.constructStandardProbe(marsBuilder)</i>
  <i>marsTemplate = marsBuilder.getResult()</i>
end note
TemplateNote .. MissionControl

note as RegistryNote
  <b>2. Register Templates (Singleton):</b>
  Get the single instance of the manager
  and add the templates to it.
  <i>manager = ConfigurationManager.getInstance()</i>
  <i>manager.addPrototype("MarsTemplate", marsTemplate)</i>
end note
RegistryNote .. ConfigurationManager

note as CloneNote
  <b>3. Create "Deployment Probes" (Prototype):</b>
  Client efficiently clones new probes
  using the Singleton manager.
  <i>manager = ConfigurationManager.getInstance()</i>
  <i>probe_A = manager.getClone("MarsTemplate")</i>
end note
CloneNote .. SpaceMissionApp

note as ModifyNote
  <b>4. Post-Cloning Modification:</b>
  Client modifies the clone. This does <b>NOT</b>
  affect the "MarsTemplate" in the registry.
  <i>probe_A.setPayloadMass(150.5)</i>
end note
ModifyNote .. SpaceProbe

@enduml